--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_template",
+  "name": "asteroid_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "* Theme: Seti-UI * Packages: linter-jshint",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +22,14 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SkyRousse/node_template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SkyRousse/node_template/issues"
+  },
+  "homepage": "https://github.com/SkyRousse/node_template#readme"
 }
